Build Finnaly working fine

--- a/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
+++ b/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
@@ -59,8 +59,10 @@ SoundCueCookQualityIndex=-1
 
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Desktop
-DefaultGraphicsPerformance=EGraphicsPreset::Maximum
+TargetedHardwareClass=Desktop
+AppliedTargetedHardwareClass=Desktop
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/DarkChamber")
@@ -68,3 +70,18 @@ DefaultGraphicsPerformance=EGraphicsPreset::Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="DarkChamberProjectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="DarkChamberGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="DarkChamberCharacter")
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=176F08E64DE3881662A337AE1A529CD4
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
