interface and stoped ignore

--- a/ProjectDarkChamber/DarkChamber/DarkChamber.uproject
+++ b/ProjectDarkChamber/DarkChamber/DarkChamber.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "DarkChamber",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
