AI now attacks player... sort of

--- a/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
+++ b/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
@@ -88,3 +88,6 @@ ManualIPAddress=
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/DarkChamber.Monster.isStunned",NewName="/Script/DarkChamber.Monster.bIsStunned")
