added finals touched for prototype

--- a/ProjectDarkChamber/DarkChamber/Config/DefaultGame.ini
+++ b/ProjectDarkChamber/DarkChamber/Config/DefaultGame.ini
@@ -8,3 +8,7 @@ ProjectID=FCEAB8304172B3A6292884A4E6EA0B0B
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
