--- a/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
+++ b/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Sessions/Maps/MainMenu_LevelTest.MainMenu_LevelTest
+GameDefaultMap=/Game/FirstPerson/Maps/MainMenu_Level.MainMenu_Level
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Sessions/Blueprints/MainMenu/GM_MainMenu.GM_MainMenu_C
 GlobalDefaultServerGameMode=None
