cameras and stuff

--- a/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
+++ b/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
@@ -13,10 +13,10 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPerson/Maps/MainMenu_Level.MainMenu_Level
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Sessions/Blueprints/MainMenu/GM_MainMenu.GM_MainMenu_C
-GlobalDefaultServerGameMode=None
+GameDefaultMap=/Game/Sessions/Maps/MainMenu_LevelTest.MainMenu_LevelTest
+ServerDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+GlobalDefaultGameMode=/Script/DarkChamber.DarkChamberGameMode
+GlobalDefaultServerGameMode=/Script/DarkChamber.DarkChamberGameMode
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
