--- a/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
+++ b/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/FirstPerson/Maps/MainMenu_Level.MainMenu_Level
 ServerDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
 GlobalDefaultGameMode=/Script/DarkChamber.DarkChamberGameMode
