deleted an include in the moster cpp

--- a/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
+++ b/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
@@ -13,8 +13,8 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/FirstPerson/Maps/MainMenu_Level.MainMenu_Level
-ServerDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+GameDefaultMap=/Game/Sessions/Maps/MainMenu_LevelTest.MainMenu_LevelTest
+ServerDefaultMap=/Game/FirstPerson/Maps/Level_1.Level_1
 GlobalDefaultGameMode=/Script/DarkChamber.DarkChamberGameMode
 GlobalDefaultServerGameMode=/Script/DarkChamber.DarkChamberGameMode
 
