--- a/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
+++ b/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+EditorStartupMap=/Game/FirstPerson/Maps/Level_1.Level_1
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/Sessions/Maps/MainMenu_LevelTest.MainMenu_LevelTest
+GameDefaultMap=/Game/FirstPerson/Maps/MainMenu_Level.MainMenu_Level
 ServerDefaultMap=/Game/FirstPerson/Maps/Level_1.Level_1
 GlobalDefaultGameMode=/Script/DarkChamber.DarkChamberGameMode
 GlobalDefaultServerGameMode=/Script/DarkChamber.DarkChamberGameMode
