--- a/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
+++ b/ProjectDarkChamber/DarkChamber/Config/DefaultEngine.ini
@@ -28,6 +28,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 
 
 r.Shadow.Virtual.Enable=1
+r.ForwardShading=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
